Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: noteapp-ingress
  namespace: prod
spec:
  ingressClassName: nginx
  rules:
  - host: noteapp.prod
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8081

      - path: /note_app
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8081

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 8080
